# demo-games_autotest

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_abonement_page.py  test_e2e_game_site.py  test_header_page.py  test_nab_bugs.py
tests.test_abonement_page/: test_check_abonement_event-browser.html
tests.test_demo/: test_demo-browser.html  test_demo1-browser.html
tests/backup_storage/: main_page.py  test_demo.py  test_e2e_game_site.py
tests/check_for_matching_sector_names/: test_stadium-browser.html
tests/example_storage/: check_for_matching_sector_names.py  test_consult.py  test_demo.py
tests/pages/: abonement_page.py  base_page.py  basket_page.py  header_page.py  locators.py  main_page.py  priority_places.py  sector_page.py
