[tool.poetry]
name = "simple_test"
version = "0.1.0"
description = ""
authors = ["Nikita Mamaev <13meiosn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-splinter = "^2.1.0"
pytest-reporter-html1 = "^0.8.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
